kyverno/privilegied-containers.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: enforce
  rules:
    - name: disallow-privileged-containers
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Contêineres privilegiados não são permitidos."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
