kyverno/validate-secrets.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-secrets-in-env
spec:
  validationFailureAction: enforce
  rules:
    - name: block-secrets-in-env
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Secrets não podem ser expostos diretamente em variáveis de ambiente."
        pattern:
          spec:
            containers:
              - env:
                  - valueFrom:
                      secretKeyRef: "null"
